--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "graphql": "^16.12.0",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "sequelize": "^6.36.0",
